modules/apps/ratings/ratings-taglib/src/main/resources/META-INF/resources/css/main.scss
@import './animations';
@import 'atlas-variables';

.ratings {
	.btn {
		overflow: hidden;
	}

	.animated-counter {
		$animation-duration: 300ms;

		display: inline-flex;
		justify-content: center;
		position: relative;

		&.animating-down {
			.current {
				animation-duration: $animation-duration;
				animation-name: fadeInDown;
			}

			.previous {
				animation-duration: $animation-duration;
				animation-name: fadeOutDown;
			}
		}

		&.animating-up {
			.current {
				animation-duration: $animation-duration;
				animation-name: fadeInUp;
			}

			.previous {
				animation-duration: $animation-duration;
				animation-name: fadeOutUp;
			}
		}

		.previous {
			position: absolute;
		}
	}
}

.ratings-like {
	button {
		&:hover:not(:disabled) .lexicon-icon {
			transform: scale(1.3);
		}
	}

	.lexicon-icon {
		transition: all 0.3s ease-in-out;
	}

	.lexicon-icon-heart-full {
		fill: red;
	}

	.likes {
		margin-left: 0.5rem;
	}
}

.ratings-thumbs {
	$animation-duration: 500ms;

	.btn {
		position: relative;

		&:hover:not(:disabled) .lexicon-icon {
			transform: scale(1.3);
		}

		.on {
			opacity: 0;
			position: absolute;
			visibility: hidden;
		}

		.off {
			opacity: 1;
			visibility: visible;
		}

		&[aria-pressed='true'] {
			.on {
				opacity: 1;
				visibility: visible;

				.lexicon-icon {
					color: $primary;
				}
			}

			.off {
				opacity: 0;
				visibility: hidden;
			}
		}

		&.btn-animation {
			&[aria-pressed='true'] {
				.on {
					animation-duration: $animation-duration;
					animation-fill-mode: forwards;
					animation-name: thumbs-on;
					animation-timing-function: ease-in-out;
				}

				&.btn-thumbs-up .on {
					transform-origin: bottom left;
				}

				&.btn-thumbs-down .on {
					transform-origin: top right;
				}
			}
		}
	}

	.lexicon-icon {
		transition: all 0.2s ease-in-out;
	}
}

.ratings-stars {
	.btn[aria-pressed='true'] .lexicon-icon {
		color: $primary;
	}

	.ratings-stars-button-text {
		font-size: 0.875rem;
		justify-content: center;
		min-width: 1ch;
	}

	.ratings-stars-average {
		line-height: 1;
		margin-top: -0.125rem;
	}

	.ratings-stars-average-text {
		color: $secondary;
		font-size: 0.875rem;
		font-weight: 600;
	}

	.ratings-stars-average-icon {
		color: $yellow;
		font-size: 1rem;
	}
}

.ratings-stars-dropdown {
	min-width: auto;
}

